<resources>
    <string name="app_name">Timmo</string>
    <string name="dash">-</string>

    <!--  sign  -->
    <string name="sign_university_description">최근에 다닌 학교는\n어디인가요?</string>
    <string name="sign_university_authentication_description">학생 인증을 위한 단계에요, 학교는 공개되지 않아요</string>
    <string name="sign_major_description">전공을 알려주세요</string>
    <string name="sign_state_description">재학 상태를 알려주세요</string>
    <string name="sign_welcome_description">팀모에 오신 걸 환영해요!</string>
    <string name="sign_position_registration_description">포지션을 등록해야 팀모에서의\n매칭 활동이 가능해요</string>
    <string name="sign_preview">둘러보기</string>
    <string name="sign_position_registration">포지션 등록하기</string>
    <string name="sign_major_hint">예) 컴퓨터공학과</string>
    <string name="sign_university_hint">예) 한국대학교</string>
    <string name="sign_entrance_year_hint">입학년도</string>
    <string name="sign_graduation_year_hint">졸업년도</string>

    <!-- loginMain -->
    <string name="login_main_start">회원가입</string>
    <string name="login_main_login">로그인</string>

    <!-- siginin -->
    <string name="sign_email">이메일</string>
    <string name="sign_password">비밀번호</string>
    <string name="sign_check">확인</string>
    <string name="sign_completion">완료</string>
    <string name="sign_next">다음</string>
    <string name="sign_forgetpassword">
        <u>비밀번호를 잊으셨나요?</u>
    </string>
    <string name="sign_password_setting">비밀번호 영문, 숫자 포함 6자</string>
    <string name="sign_password_check">비밀번호 확인</string>
    <string name="sign_agree_check">팀모의 다음 사항에 동의하는 것으로 간주합니다.</string>
    <string name="sign_tos">이용약관</string>
    <string name="sign_and">과</string>
    <string name="sign_personal_information">개인정보 정책</string>
    <string name="sign_start_title">반가워요</string>
    <string name="sign_start_comment">기본 정보를 등록하고 다양한 프로젝트와\n팀원들을 만나보세요</string>
    <string name="sign_keep_going">계속하기</string>
    <string name="sign_nickname_title">팀모에서 사용할\n닉네임을 입력해주세요</string>
    <string name="sign_nickname_comment">팀모는 익명성을 위해 실명을 공개하지 않아요</string>
    <string name="sign_nickname">닉네임</string>
    <string name="sign_location_title">거주 지역을 알려주세요</string>
    <string name="sign_location_comment">더욱 가까운 지역의 팀원을 매칭해주기 위함이에요!\n개인정보는 공개되지 않아요</string>
    <string name="sign_sido">시/도</string>
    <string name="sign_sigungu">시/군/구</string>

    <!-- findpassword -->
    <string name="find_password_next">다음</string>
    <string name="find_password_completion">완료</string>
    <string name="find_password_email">이메일</string>
    <string name="find_password_password">비밀번호</string>
    <string name="find_password_certification_number">인증번호</string>
    <string name="find_password_password_check">비밀번호 확인</string>
    <string name="find_password_email_send_comment">이메일로 인증번호를 전송했어요</string>
    <string name="find_password_new_password_comment">새로운 비밀번호를 입력해주세요</string>

    <!--timmo write -->
    <string name="timmo_write_teamone_title">모집하고자 하는\n팀원에 대해 작성해주세요</string>
    <string name="timmo_write_teamone_comment">모집하고자 하는 팀원 수</string>
    <string name="timmo_write_teamone_number">2명</string>
    <string name="timmo_write_first_teamone">1번 팀원</string>
    <string name="timmo_write_field">모집 팀원 분야</string>
    <string name="timmo_write_field_example">예) 디자인</string>
    <string name="timmo_write_tag">상세 분류 태그</string>
    <string name="timmo_write_tag_example">예) #UI/UX디자이너</string>
    <string name="timmo_write_introduction">팀에 대해\n소개해주세요</string>
    <string name="timmo_write_profile_selection">나의 프로필 선택</string>
    <string name="timmo_write_no_care">상관 없음</string>
    <string name="timmo_write_working_time">작업 시간대</string>
    <string name="timmo_write_morning">아침 작업형</string>
    <string name="timmo_write_night">저녁 작업형</string>
    <string name="timmo_write_working_method">작업 방식</string>
    <string name="timmo_write_plan">계획형</string>
    <string name="timmo_write_immersion">몰입형</string>
    <string name="timmo_write_team_condition">팀 분위기</string>
    <string name="timmo_write_introvert">내향적</string>
    <string name="timmo_write_extrovert">외향적</string>
    <string name="timmo_write_activation_location">팀 활동 지역</string>
    <string name="timmo_write_recent_team_profile">현재 함께하는 팀원 프로필</string>
</resources>